Add link to thesis

--- a/curriculum/cv.tex
+++ b/curriculum/cv.tex
@@ -129,7 +129,7 @@ Research themes : optimization and regularization methods for machine learning.
 }
 
 \section{Ph.D. thesis (2012--2015)}
-\cvitem{title}{\emph{Descent dynamical systems and algorithms for tame optimization and multi-objective problems}}
+\cvitem{title}{\emph{Descent dynamical systems and algorithms for tame optimization and multi-objective problems} \link[\scriptsize{\PaperPortrait}]{https://tel.archives-ouvertes.fr/tel-01245406}}
 \cvitem{university}{Université de Montpellier (France) and Universidad Santa Maria (Valparaíso, Chile)}
 \cvitem{supervisors}{Hédy Attouch (UM) and Juan Peypouquet (USM)}
 \cvitem{committee}{Hédy Attouch, Aris Daniilidis, Jalal Fadili, Pedro Gajardo, Adrian Lewis, Juan Peypouquet, Lionel Thibault}
