--- a/_posts/2019-11-28-tutorial.md
+++ b/_posts/2019-11-28-tutorial.md
@@ -1,5 +1,5 @@
 ---
-image:
+image: nonconvex_descent.png
 ---
 
 Together with [Lénaïc Chizat](https://lchizat.github.io/) I gave a tutorial on **Optimization for Nonconvex Optimization** within the [SMILE](https://sites.google.com/site/smileinparis/) seminar. You can find the (non-animated) slides of my talk [here](/assets/slides/2019-tutorial-nonconvex.pdf).
